php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28239 No results returned on SOAP call, no error given
Submitted: 2004-04-30 21:51 UTC Modified: 2004-05-22 11:25 UTC
From: millz at incogen dot com Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.0.0RC2 OS: Red Hat 9
Private report: No CVE-ID: None
 [2004-04-30 21:51 UTC] millz at incogen dot com
Description:
------------
Making a call to a simple perl-based SOAP service is failing with no error/exception (the result is null/empty).  
I use the nusoap.php package to make the same call and it succeeds.

The soap method reverse returns the reverse of the inputted string.  

I am trying to call the reverser method from this WSDL:
http://jabba.incogen.com:8888/soapStringHandler.wsdl like this (see code for more details): 
$results = $builtinSoap->reverser( "asd" );

I get no result, even though it works via nusoap.php, perl soap clients, .NET soap clients, etc.  

I assume this is just user error, if so I apologize.  

Reproduce code:
---------------
$wsdlUrl = 'http://jabba.incogen.com:8888/soapStringHandler.wsdl';
  
    try {
       $builtinSoap = new SoapClient( $wsdlUrl );
            // print_r( $builtinSoap->__getFunctions() );
            $results = $builtinSoap->reverser( "asd" );
            if(!$results){print "Got no results from builtin soap!";}
            // $builtinSoap->__getLastResponse();
            $body .= 'Result returned from web service: <b>' . $results . '</b>';
    } catch (SoapFault $fault) {
       trigger_error("SOAP Fault: (faultcode: {$fault->faultcode}, faultstring: {$fault->faulstring})", E_ERROR);
    }

Expected result:
----------------
I would expect "dsa" as the result

Actual result:
--------------
NULL/nothing

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-30 21:52 UTC] millz at incogen dot com
the method is called reverser(), not reverse as I sometimes said in my original report

I did not show the part of the code where $body is print()'d out.
 [2004-05-21 23:59 UTC] millz at incogen dot com
I am not sure why this bug is now closed, my last comment was not meant to indicate that it was fixed, but to provide more info about the bug.
 [2004-05-22 11:25 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC