Fixed bug #28239 (No results returned on SOAP call, no error given)